# EndToEndAIEngineering

./: Dockerfile  docker-compose.yml  main.py  pyproject.toml
apps/api/: pyproject.toml
apps/api/src/api/: app.py
apps/api/src/api/core/: config.py
apps/chatbot_ui/: pyproject.toml
apps/chatbot_ui/src/chatbot_ui/: app.py
notebooks/prerequisites/: llm-apis.ipynb
src/: app.py
